Quarkus: Refactor createReceipt method to enhance validation and improve clarity